<resources>
    <string name="app_name">Find it</string>
    <string name="welcome">Welcome!</string>
    <string name="enter_email">Enter Email</string>
    <string name="login">LOGIN</string>
    <string name="don_t_have_an_account">Don\'t Have an Account?</string>
    <string name="password">Password</string>
    <string name="last_name">Last Name</string>
    <string name="first_name">First Name</string>
    <string name="sign_up">Sign Up</string>
    <string name="title">Title</string>
    <string name="description">Description</string>
    <string name="h">h</string>
    <string name="m">m</string>
    <string name="s">s</string>
    <string name="_00">00</string>
    <string name="go">GO!</string>
    <string name="add_note">Add Note</string>
    <string name="logout">LOGOUT</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="enter_details">Enter Details</string>
    <string name="enter_item_category">*Enter Item Category</string>
    <string name="enter_brand_name">Enter Brand Name</string>
    <string name="enter_item_details">*Enter Item Details</string>
    <string name="enter_contact_details">*Enter Contact Details</string>
    <string name="save">Save</string>
    <string name="to_remember">To Remember</string>
    <string name="found">Found</string>
    <string name="lost">Lost</string>
    <string name="add_an_image">Add an Image</string>
    <string name="item_details">Item Details</string>
    <string name="contact_details">Contact Details</string>
    <string name="item_image">Item Image</string>
    <string name="add_a_reminder">Forget things easily? Add a Reminder</string>
    <string name="my_reminders">My Reminders</string>
    <string name="found_something_or_lost_it_get_in">Found Something or Lost it, Get In!!</string>
    <string name="lost_n_found_things">Lost N Found Things</string>
    <string name="enter_location">*Enter Location</string>
    <string name="found_at">Found At</string>
    <string name="location">location</string>
    <string name="edit">Edit</string>
    <string name="delete">Delete</string>
    <string name="category">Category</string>
    <string name="brand">Brand</string>
    <string name="brief">Brief</string>
    <string name="contact_name">Contact Name</string>
    <string name="contact">Contact</string>
    <string name="update">Update</string>
    <string name="my_uploads">My Uploads</string>
    <string name="verify">Verify</string>
    <string name="enter_some_unique_features_about_your_item">Some Unique Features about your Item</string>
    <string name="send">Send</string>
    <string name="replies">Replies</string>
    <string name="enter_item_name">Enter Item Name</string>
</resources>