<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    tools:context=".LoginActivity">

    <EditText
        android:id="@+id/logemail"
        android:layout_width="254dp"
        android:layout_height="31dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="240dp"
        android:gravity="center_vertical"
        android:textColorHint="#000000"
        android:drawablePadding="10dp"
        android:drawableStart="@drawable/email"
        android:background="@drawable/input_field"
        android:hint="@string/enter_email"
        android:textColor="@color/black"
        android:textSize="16sp"
        android:fontFamily="@font/regular"/>

    <EditText
        android:id="@+id/logpassword"
        android:layout_width="254dp"
        android:layout_height="31dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="36dp"
        android:gravity="center_vertical"
        android:drawableStart="@drawable/password"
        android:background="@drawable/input_field"
        android:textColorHint="#000000"
        android:drawablePadding="10dp"
        android:hint="@string/password"
        android:textColor="@color/black"
        android:textSize="16sp"
        android:fontFamily="@font/regular"/>

    <Button
        android:id="@+id/logbtn"
        android:layout_width="254dp"
        android:layout_height="31dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="36dp"
        android:background="@drawable/button"
        android:fontFamily="@font/regular"
        android:gravity="center"
        android:text="@string/login"
        android:textColor="@color/white"
        android:textSize="16sp" />

    <ImageView
        android:id="@+id/google_login"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:src="@drawable/google_logo"
        android:layout_marginTop="110dp"
        android:layout_gravity="center_horizontal"/>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:layout_gravity="center_horizontal"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/don_t_have_an_account"
            android:textSize="16sp"
            android:textColor="@color/black"/>

        <TextView
            android:id="@+id/signuptxt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sign_up"
            android:textSize="16sp"
            android:textColor="@color/text_blue"
            android:layout_marginStart="3dp"/>

    </LinearLayout>

</LinearLayout>