<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".activities.EditProductActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

    <ImageButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/back_btn_productedit"
        android:src="@drawable/goback"
        android:layout_marginTop="20dp"
        android:layout_marginStart="20dp"
        android:background="@color/white"
        android:contentDescription="@null" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginLeft="10dp"
        android:fontFamily="@font/ight"
        android:layout_marginTop="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginBottom="10dp"
        android:background="@drawable/buttonbg"
        android:gravity="center_horizontal"
        android:padding="5dp"
        android:text="@string/item_details"
        android:textColor="#FFFFFF"
        android:textSize="24sp"
        android:textStyle="bold" />

        <EditText
            android:id="@+id/edit_category"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="10dp"
            android:layout_marginRight="20dp"
            android:layout_marginBottom="10dp"
            android:padding="5dp"
            android:hint="@string/category"
            android:inputType="textCapWords"
            android:textColor="@color/black"
            android:textSize="18sp"
            android:textStyle="bold"
            android:importantForAutofill="no" />

        <EditText
            android:id="@+id/edit_brand"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="10dp"
            android:layout_marginRight="20dp"
            android:layout_marginBottom="10dp"
            android:padding="5dp"
            android:hint="@string/brand"
            android:inputType="textCapWords"
            android:textColor="@color/black"
            android:textSize="18sp"
            android:textStyle="bold"
            android:importantForAutofill="no"/>

        <EditText
            android:id="@+id/edit_brief"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="10dp"
            android:layout_marginRight="20dp"
            android:layout_marginBottom="10dp"
            android:inputType="textCapSentences"
            android:padding="5dp"
            android:hint="@string/brief"
            android:textColor="@color/black"
            android:textSize="18sp"
            android:textStyle="bold"
            android:importantForAutofill="no"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginLeft="10dp"
            android:fontFamily="@font/ight"
            android:layout_marginTop="30dp"
            android:layout_marginRight="10dp"
            android:layout_marginBottom="10dp"
            android:background="@drawable/buttonbg"
            android:gravity="center_horizontal"
            android:padding="5dp"
            android:text="@string/contact_details"
            android:textColor="#FFFFFF"
            android:textSize="24sp"
            android:textStyle="bold" />


        <EditText
            android:id="@+id/edit_contact"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="10dp"
            android:layout_marginRight="20dp"
            android:layout_marginBottom="10dp"
            android:padding="5dp"
            android:inputType="text"
            android:hint="@string/contact"
            android:textColor="@color/black"
            android:textSize="18sp"
            android:textStyle="bold"
            android:importantForAutofill="no"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginLeft="10dp"
            android:fontFamily="@font/ight"
            android:layout_marginTop="30dp"
            android:layout_marginRight="10dp"
            android:layout_marginBottom="10dp"
            android:background="@drawable/buttonbg"
            android:gravity="center_horizontal"
            android:padding="5dp"
            android:text="@string/found_at"
            android:textColor="#FFFFFF"
            android:textSize="24sp"
            android:textStyle="bold"
            android:importantForAutofill="no"/>

        <EditText
            android:id="@+id/edit_location"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="10dp"
            android:layout_marginRight="20dp"
            android:layout_marginBottom="10dp"
            android:inputType="textCapWords"
            android:padding="5dp"
            android:hint="@string/location"
            android:textColor="@color/black"
            android:textSize="18sp"
            android:textStyle="bold"
            android:importantForAutofill="no"/>

        <Button
            android:id="@+id/update_item"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginStart="110dp"
            android:layout_marginTop="30dp"
            android:layout_marginEnd="110dp"
            android:background="@drawable/buttonbg"
            android:text="@string/update"
            android:textColor="@color/white"
            android:textSize="20sp" />

    </LinearLayout>



</ScrollView>