<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.ProductDescriptionActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <ImageButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/exit_description"
            android:src="@drawable/goback"
            android:layout_marginTop="20dp"
            android:layout_marginStart="20dp"
            android:background="@color/white"
            android:contentDescription="@null" />

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginLeft="10dp"
            android:fontFamily="@font/ight"
            android:layout_marginTop="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginBottom="10dp"
            android:background="@color/blue"
            android:gravity="center_horizontal"
            android:padding="5dp"
            android:text="@string/item_details"
            android:textColor="#FFFFFF"
            android:textSize="24sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/tvItemCategory"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="10dp"
            android:layout_marginRight="20dp"
            android:layout_marginBottom="10dp"
            android:padding="5dp"
            android:text="@string/category"
            android:textColor="@color/black"
            android:textSize="18sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/tvItemBrand"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="10dp"
            android:layout_marginRight="20dp"
            android:layout_marginBottom="10dp"
            android:padding="5dp"
            android:text="@string/brand"
            android:textColor="@color/black"
            android:textSize="18sp"
            android:textStyle="bold" />


        <TextView
            android:id="@+id/textView14"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginLeft="10dp"
            android:fontFamily="@font/ight"
            android:layout_marginTop="30dp"
            android:layout_marginRight="10dp"
            android:layout_marginBottom="10dp"
            android:background="@color/blue"
            android:gravity="center_horizontal"
            android:padding="5dp"
            android:visibility="gone"
            android:text="@string/contact_details"
            android:textColor="#FFFFFF"
            android:textSize="24sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/tvContactName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="10dp"
            android:layout_marginRight="20dp"
            android:layout_marginBottom="10dp"
            android:padding="5dp"
            android:visibility="gone"
            android:text="@string/contact_details"
            android:textColor="@color/black"
            android:textSize="18sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/tvContactNumber"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="10dp"
            android:layout_marginRight="20dp"
            android:visibility="gone"
            android:layout_marginBottom="10dp"
            android:padding="5dp"
            android:text="@string/contact"
            android:textColor="@color/black"
            android:textSize="18sp"
            android:textStyle="bold" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginLeft="10dp"
            android:fontFamily="@font/ight"
            android:layout_marginTop="30dp"
            android:layout_marginRight="10dp"
            android:layout_marginBottom="10dp"
            android:background="@color/blue"
            android:gravity="center_horizontal"
            android:padding="5dp"
            android:text="@string/found_at"
            android:textColor="#FFFFFF"
            android:textSize="24sp"
            android:textStyle="bold"
            />

        <TextView
            android:id="@+id/tvlocation"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="10dp"
            android:layout_marginRight="20dp"
            android:layout_marginBottom="10dp"
            android:padding="5dp"
            android:text="@string/location"
            android:textColor="@color/black"
            android:textSize="18sp"
            android:textStyle="bold"/>

        <TextView
            android:id="@+id/tvVerify"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginLeft="10dp"
            android:fontFamily="@font/ight"
            android:layout_marginTop="30dp"
            android:layout_marginRight="10dp"
            android:layout_marginBottom="10dp"
            android:background="@color/blue"
            android:gravity="center_horizontal"
            android:padding="10dp"
            android:text="@string/verify"
            android:textColor="#FFFFFF"
            android:textSize="24sp"
            android:textStyle="bold"
            />

        <EditText
            android:id="@+id/etVerification"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="10dp"
            android:layout_marginRight="20dp"
            android:layout_marginBottom="10dp"
            android:background="#A3A4A8"
            android:padding="5dp"
            android:hint="@string/enter_some_unique_features_about_your_item"
            android:singleLine="true"
            android:textColorHint="@color/grey"
            android:textColor="@color/black"
            android:textSize="18sp"
            android:textStyle="bold"
            android:importantForAutofill="no"
            android:inputType="textCapSentences" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/verifyBtn"
            android:text="@string/send"
            android:textColor="@color/white"
            android:textSize="18sp"
            android:layout_gravity="center_horizontal"
            android:paddingStart="30dp"
            android:paddingEnd="30dp"
            android:background="@drawable/input_field"
            android:backgroundTint="#1B1818"
            android:layout_marginTop="10dp"
            tools:ignore="RtlSymmetry" />

        <TextView
            android:id="@+id/textView17"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="50dp"
            android:layout_marginRight="10dp"
            android:layout_marginBottom="10dp"
            android:background="@color/blue"
            android:gravity="center_horizontal"
            android:padding="5dp"
            android:fontFamily="@font/ight"
            android:text="@string/item_image"
            android:textColor="#FFFFFF"
            android:textSize="24sp"
            android:textStyle="bold" />

        <ProgressBar
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/progress_bar"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="15dp"
            />

        <ImageView
            android:id="@+id/ivLostImage"
            android:layout_width="300dp"
            android:layout_height="280dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="10dp"
            android:layout_marginRight="20dp"
            android:layout_marginBottom="10dp"
            android:contentDescription="@null" />

    </LinearLayout>
</ScrollView>